force-app/main/default/objects/pse__Project_Task_Assignment__c/fields/pse__Action_Sync_With_External_Calendar__c.field-meta.xml
<CustomField>
    <fullName>pse__Action_Sync_With_External_Calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to sync PTA with external calendar.</description>
    <inlineHelpText>If selected on save, the PTA is synced with the external calendar.</inlineHelpText>
    <label>Action: Sync with External Calendar</label>
    <type>Checkbox</type>
</CustomField>