force-app/main/default/objects/pse__Project_Task_Assignment__c/fields/pse__Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>pse__Actual_Cost__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>The actual cost of the project task assignment, which is calculated by multiplying its timecard actual hours by the cost rate of the assigned resources.</description>
    <inlineHelpText>The actual cost of the project task assignment, which is calculated by multiplying its timecard actual hours by the cost rate of the assigned resources.</inlineHelpText>
    <label>Actual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>