force-app/main/default/objects/pse__Project_Task_Assignment__c/fields/pse__Allocation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>pse__Allocation_Percentage__c</fullName>
    <description>The percentage resource and/or role allocation of the task&apos;s estimated hours.</description>
    <inlineHelpText>The percentage resource and/or role allocation of the task&apos;s estimated hours.</inlineHelpText>
    <label>Allocation Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>