force-app/main/default/objects/pse__Project_Task_Assignment__c/fields/pse__Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>pse__Estimated_Cost__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>The estimated cost of the project task assignment, calculated from the allocated hours and the default cost rates of the assigned resources.</description>
    <inlineHelpText>The estimated cost of the project task assignment, calculated from the allocated hours and the default cost rates of the assigned resources.</inlineHelpText>
    <label>Estimated Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>