force-app/main/default/objects/pse__Project_Task_Assignment__c/fields/pse__Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Hours__c</fullName>
    <description>The number of scheduled hours.</description>
    <formula>IF( AND(NOT(ISBLANK(pse__Assignment__c)), NOT(ISBLANK(pse__Assignment__r.pse__Scheduled_Hours__c)) ),
pse__Assignment__r.pse__Scheduled_Hours__c, 
 IF( NOT(ISBLANK(pse__Resource_Request__c)), IF( AND( NOT(ISBLANK(pse__Resource_Request__r.pse__Preferred_Schedule__c)), NOT(ISBLANK( pse__Resource_Request__r.pse__Preferred_Schedule__r.pse__Scheduled_Hours__c)) ), 
pse__Resource_Request__r.pse__Preferred_Schedule__r.pse__Scheduled_Hours__c, 
 IF( NOT(ISBLANK(pse__Resource_Request__r.pse__SOW_Hours__c)), pse__Resource_Request__r.pse__SOW_Hours__c, 0) ), 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of scheduled hours from a related Assignment (if one exists) or, if a Related Resource exists, either the number of hours associated with the Related Resource&apos;s Preferred Schedule or the requested number of hours.</inlineHelpText>
    <label>Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>